Add "--enable-preview" option to micronaut maven plugin configuration